tests/negative/symbols/undeclared.orng
// undeclared.orng:6:15: error: use of undeclared identifier `googoogaga`
//     googoogaga
//              ^
// 
fn main() -> Int {
    googoogaga
}